# Proyecto_DSA_2026_19

./: .gitignore  02_modelo_recomendacion.ipynb  03_tablero.py  Código EDA Completo.ipynb  README.md  crear_notebook.py  mlflow.db  mlflow1.pem  modelo_recomendacion.py  requirements.txt
.dvc/: config
Entrega_3/despliegue-modelo/package-src/: setup.py  tox.ini
Entrega_3/despliegue-modelo/test/: Resumen.csv  test-package.py
Entrega_3/package-src/: MANIFEST.in
Entrega_3/package-src/recomendacion_productos.egg-info/: SOURCES.txt
Entrega_3/package-src/requirements/: test_requirements.txt  typing_requirements.txt
Entrega_3/recomendacion-api/: requirements.txt  test_requirements.txt
dashboard/: README.md  app.py  requirements.txt
dashboard/assets/: style.css
dashboard/data/: probabilidades_completas.csv  recomendaciones_modelo.csv  recomendaciones_top3.csv
data/: Clientes.csv  Clientes.csv.dvc  Resumen.csv  Resumen.csv.dvc
despliegue-modelo/package-src/: pyproject.toml
despliegue-modelo/package-src/recomendacion/: config.yml
despliegue-modelo/package-src/recomendacion/config/: core.py
despliegue-modelo/package-src/recomendacion/processing/: data_manager.py  features.py  validation.py
despliegue-modelo/package-src/recomendacion_productos.egg-info/: requires.txt  top_level.txt
despliegue-modelo/package-src/requirements/: requirements.txt
despliegue-modelo/package-src/tests/: test_prediction.py
despliegue-modelo/test/: Clientes.csv
recomendacion-api/: tox.ini  typing_requirements.txt
recomendacion-api/app/: api.py  config.py  main.py
(+6 files in other folders)
